# robot-autoresearch

./: .gitignore  README.md  benchmark.json  prepare.py  program_autorobobench.md  program_robocasa.md  pyproject.toml  setup.py  train.py
autorobobench/: __init__.py  cli.py  schema.py  scoring.py
configs/: autorobobench_v0.json  robocasa5_world_evaluator.json  world_model_evaluator_scale.json
data/: download_robocasa.py  export_robocasa_cosmos_action.py  export_robocasa_oscar_asset.py  export_robocasa_oscar_trace_assets.py  libero_dataset.py  make_libero5.py  make_robocasa5.py  robocasa_dataset.py
docs/: autorobobench_v0.md  bench_task_instructions.md  robocasa_task_baselines.md
eval/: compare_policy_actions.py  eval_demo_retrieval.py  eval_libero_success.py  eval_obs_retrieval.py  eval_robocasa_chunk_policy.py  eval_robocasa_policy_ensemble.py  eval_robocasa_tiny_evaluator_correlation.py  plot_robocasa_bc_loss.py  render_libero_rollout.py  render_robocasa_chunk_policy.py  render_robocasa_latent_rgb_rollout.py  render_robocasa_openloop_rollout.py  render_robocasa_tiny_evaluator_rollout.py  render_robocasa_vae_rgb_rollout.py  replay_libero_demo.py  train_full_trajectory_bc.py  train_full_trajectory_bc_robocasa.py  train_retrieval_embedder.py  train_retrieval_selector.py  train_temporal_chunk_bc_robocasa.py
examples/: autorobobench_v0_results.json
models/: policy.py  robocasa_latent_flow.py  robocasa_mini_video_world_model.py  robocasa_sequence_flow.py  robocasa_tiny_evaluator.py
research/: autoresearch50.py  cosmos_robocasa_finetune.md  run_fulltraj50.py  (+7 more)
(+179 files in other folders)
